2010-01-12  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        position:fixed and transform on same element breaks fixed behavior
        https://bugs.webkit.org/show_bug.cgi?id=31283

        Test for transforms combined with fixed positioning.

        * platform/mac/transforms/2d/transform-fixed-container-expected.checksum: Added.
        * platform/mac/transforms/2d/transform-fixed-container-expected.png: Added.
        * platform/mac/transforms/2d/transform-fixed-container-expected.txt: Added.
        * transforms/2d/transform-fixed-container.html: Added.

2010-01-12  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Adam Barth.

        Replacing RANDOMBLOB with ZEROBLOB, as RANDOMBLOB will soon be
        disallowed by the authorizer.

        https://bugs.webkit.org/show_bug.cgi?id=33396

        * storage/quota-tracking.html:

2010-01-12  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Geoffrey Garen.

        [ES5] Implement Object.getOwnPropertyNames
        https://bugs.webkit.org/show_bug.cgi?id=32242

        Add tests for Object.getOwnPropertyNames(o), both standard usage and cross origin.

        * fast/js/Object-getOwnPropertyNames-expected.txt: Added.
        * fast/js/Object-getOwnPropertyNames.html: Added.
        * fast/js/script-tests/Object-getOwnPropertyNames.js: Added.
        * http/tests/security/cross-frame-access-enumeration-expected.txt:
        * http/tests/security/cross-frame-access-enumeration.html:

2010-01-12  Brian Weinstein  <bweinstein@apple.com>

        Add correct expected results after r53168 for GTK and Qt.

        * platform/gtk/fast/block: Added.
        * platform/gtk/fast/block/positioning: Added.
        * platform/gtk/fast/block/positioning/absolute-positioning-no-scrollbar-expected.txt: Added.
        * platform/qt/fast/block/positioning/absolute-positioning-no-scrollbar-expected.txt: Added.

2010-01-12  Brian Weinstein  <bweinstein@apple.com>
